--- a/src/style/element-overwrite.scss
+++ b/src/style/element-overwrite.scss
@@ -161,3 +161,8 @@ $input-height: 24px;
     color: $theme-color !important;
   }
 }
+
+$form-item-height: 30px;
+.el-form-item__content {
+  height: $form-item-height;
+}
